--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -4,7 +4,7 @@
     }
 
     #navigation a {
-      color: white;
+      color: black;
     }
 
     nav ul {
